--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,7 @@
 [build]
 functions = "functions"
 [[redirects]]
-from = "/api/proxy-ideris"
-to = "/.netlify/functions/proxy-ideris"
+from = "/api/facilzap-proxy"
+to = "/.netlify/functions/facilzap-proxy"
 status = 200
 force = true
