feat: implementar CRM local com integração FacilZap API
- Criar servidor local (server.js) com proxy para API FacilZap
- Reescrever script.js com armazenamento LocalStorage
- Implementar lógica de CRM: status de clientes, inatividade, histórico
- Adicionar cruzamento de dados: Pedidos x Clientes x Produtos
- Criar filtros por status (Ativo, Em Risco, Inativo)
- Adicionar visualização de histórico de compras por cliente
- Atualizar package.json com scripts de execução
- Adicionar README.md com documentação completa

--- a/package.json
+++ b/package.json
@@ -1,7 +1,12 @@
 {
   "name": "crm-facilzap-integration",
   "version": "1.0.0",
-  "description": "Proxy para a integração do CRM com a API da FacilZap",
+  "description": "CRM integrado com a API da FacilZap - Versão Local",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js",
+    "dev": "node server.js"
+  },
   "dependencies": {
     "node-fetch": "^2.7.0"
   }
