feat: VEXX AI Ecosystem - 7 camadas de inteligencia autonoma
CAMADA 1 - Integração & Webhooks:
- functions/evolution-webhook.js: Receptor universal de eventos Evolution API
- Normaliza 10+ tipos de evento (texto, audio, imagem, doc, presença, grupos)
- Enriquece com dados Supabase (perfil, sessão ativa, tier VIP)
- Persiste em eventos_brutos para auditoria
- Encaminha automaticamente para o Orquestrador

CAMADA 2 - Orquestrador & Memória:
- functions/ai-orchestrator.js: Cérebro central do sistema
- Classificação de intenções em 3 fases (keywords  sessão  IA Groq)
- Roteamento inteligente para 3 agentes (anne, expansion, finance)
- Memória curto prazo (sessões ativas, timeout 30min, max 50 msgs)
- Memória médio prazo (histórico conversas com resumo IA automático)
- Memória longo prazo (perfil enriquecido: tier, preferências, métricas)

CAMADA 4 - Agentes Especialistas:
- Anne: Vendas atacado (grade, estoque, preço, upsell, cupons)
- Expansion: C4 Franquias (ROI, cases, funil de conversão)
- Finance: CRM financeiro (pedidos, pagamentos, rastreio)
- System prompts dedicados com personalidade e táticas
- 12 tools implementadas (consultar_estoque, calcular_grade, etc)

CAMADA 5 - Automações & Gatilhos:
- Recuperação carrinho abandonado (3 ondas: 4h, 24h, 48h)
- Geração automática de cupons temporários (onda 3)
- Reativação de clientes inativos (segmentação por tier)
- Follow-up automático pós-conversa
- Scheduler via tabela automacoes_agendadas

CAMADA 6 - Analytics & Aprendizado:
- Métricas por agente (conversas, conversão, qualidade, tools)
- Sistema de feedback (1-5 estrelas via WhatsApp)
- Insights IA (padrões de falha, oportunidades)
- RPC calcular_metricas_agente no Supabase

CAMADA 7 - Interface & Configuração:
- API playground para teste de agentes sem enviar WhatsApp
- CRUD de configuração de agentes (system_prompt versionado)
- Ferramentas habilitáveis por agente com permissões

Schema Supabase (supabase-ai-ecosystem.sql):
- 14 tabelas novas (eventos, sessões, 

--- a/netlify.toml
+++ b/netlify.toml
@@ -75,6 +75,25 @@ to = "/.netlify/functions/whatsapp-proxy?route=sync-client-name"
 status = 200
 force = true
 
+# AI Ecosystem routes
+[[redirects]]
+from = "/api/ai/orchestrator"
+to = "/.netlify/functions/ai-orchestrator"
+status = 200
+force = true
+
+[[redirects]]
+from = "/api/ai/webhook"
+to = "/.netlify/functions/evolution-webhook"
+status = 200
+force = true
+
+[[redirects]]
+from = "/webhook/evolution"
+to = "/.netlify/functions/evolution-webhook"
+status = 200
+force = true
+
 [functions]
 node_bundler = "esbuild"
 
@@ -89,3 +108,9 @@ timeout = 10
 
 [functions."whatsapp-proxy"]
 timeout = 30
+
+[functions."ai-orchestrator"]
+timeout = 30
+
+[functions."evolution-webhook"]
+timeout = 15
