fix: catálogo de produtos vazio + anny dashboard 404
- Normalizar campos de produto no facilzap-proxy (nome, preco, estoque, imagem)
- Fallback localStorage para produtos (exibir cache enquanto API carrega)
- Redirect /api/anny/* com wildcard no netlify.toml
- Suportar action via path (/api/anny/dashboard) além de query param
- Não mostrar erro se cache de produtos disponível

--- a/netlify.toml
+++ b/netlify.toml
@@ -16,6 +16,12 @@ status = 200
 force = true
 
 [[redirects]]
+from = "/api/anny/*"
+to = "/.netlify/functions/anny-ai/:splat"
+status = 200
+force = true
+
+[[redirects]]
 from = "/api/anny"
 to = "/.netlify/functions/anny-ai"
 status = 200
