fix(high-8): sessions persist, DDI safe, allClients sync, profile cache, media URLs
1. #2 allClients memory sync on crm-cloud-loaded event
2. #5 Product modal: removed .slice(0,60) limit on both views
3. #7 DDI wa.me: safeWaPhone() helper, fixed 9 hardcoded locations in script.js
4. #9 Chat API: configurable limit param on /api/whatsapp/all-chats
5. #10 Profile pics: localStorage cache with 24h TTL, survives reload
6. #13 Sessions: file-based persistence in .crm-data/sessions.json
7. #15 Webhook: preserves mediaUrl+mediaType for images/video/audio/docs
8. #20 chatModes: file-based persistence in .crm-data/chat-modes.json

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,8 @@
 # Local Netlify folder
 .netlify
+
+# CRM persistent data (sessions, chatModes - contains secrets)
+.crm-data/
+
+# Environment variables
+.env
