feat: Preparar deploy VPS/Easypanel - Backend completo na nuvem
- Dockerfile otimizado com healthcheck e usuario nao-root
- docker-compose.yml para Easypanel com variaveis de ambiente
- server.js: PORT dinamico, CORS flexivel, webhook URL publica
- atendimentos.js: deteccao automatica de ambiente (localhost vs VPS vs Netlify)
- script.js: CRM_API_BASE dinamico para todas as chamadas
- lib-data-layer.js, lib-chat-loader.js, lib-anne-panel.js, lib-auto-sync.js: API dinâmica
- campanhas.html: API_BASE dinamico
- Socket.IO: conexao aponta para backend correto
- .dockerignore: otimizado para build menor

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,6 +1,19 @@
 node_modules
 .env
 .git
+.gitignore
 *.md
 n8n-agente-anne-workflow*.json
 crm-whatsapp-pro
+auth_session
+supabase-*.sql
+*.json
+!package.json
+!package-lock.json
+.crm-data
+docker-compose.yml
+Dockerfile
+netlify.toml
+start-crm-server.bat
+server.old.js
+index.old.html
