deploy: migrar Easypanel de monolito HTML para Next.js
- Dockerfile multi-stage: build Next.js standalone + runtime com supervisord
- supervisord roda 2 processos: Next.js (:3000 frontend) + server.js (:3001 API)
- docker-compose: servico unico crm-app, CRM_API_URL=http://localhost:3001
- next.config.js: output standalone para Docker otimizado
- .dockerignore: inclui crm-whatsapp-pro, exclui HTMLs/JS do monolito
- Easypanel faz redeploy automatico ao push na main

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,19 +1,33 @@
 node_modules
+**/node_modules
 .env
 .git
 .gitignore
-*.md
 n8n-agente-anne-workflow*.json
-crm-whatsapp-pro
 auth_session
 supabase-*.sql
 *.json
 !package.json
 !package-lock.json
+!crm-whatsapp-pro/package.json
+!crm-whatsapp-pro/package-lock.json
 .crm-data
 docker-compose.yml
-Dockerfile
 netlify.toml
 start-crm-server.bat
 server.old.js
 index.old.html
+crm-whatsapp-pro/.next
+crm-whatsapp-pro/node_modules
+
+# Monolito frontend (não mais necessário)
+index.html
+anny.html
+atendimentos.html
+campanhas.html
+login.html
+atendimentos.js
+script.js
+lib-*.js
+*.md
+*.png
